<resources>
    <string name="app_name">Design Demo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_about">About</string>
    <string name="nav_item_contact">Contact</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_activity">My Activity</string>
    <string name="nav_sub_menu_job">Find Job</string>

    <string name="drawer_header_name">Holy Moly</string>
    <string name="drawer_header_email">holy@moly@gmail.com</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_third">ThirdActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>